--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "App\\": "app/"
         }
     },
-    "require": {}
+    "require": {
+      "ext-pdo": "*",
+        "vlucas/phpdotenv": "^5.3"
+    }
 }
