--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "workbox-webpack-plugin": "^6.1.5"
+  },
+  "dependencies": {
+    "vue": "^3.1.4",
+    "vue-router": "^4.0.10"
   }
 }
