--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.2",
     "style-loader": "^3.0.0",
+    "vue-loader": "^16.3.0",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "workbox-webpack-plugin": "^6.1.5"
   },
   "dependencies": {
-    "vue": "^3.1.4",
+    "@vue/compiler-sfc": "^3.1.4",
     "vue-router": "^4.0.10"
   }
 }
