--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@vue/compiler-sfc": "^3.1.4",
     "normalize.css": "^8.0.1",
+    "vue": "^2.6.14",
     "vue-router": "^4.0.10"
   }
 }
