--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.1.4",
+    "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
     "vue": "^3.1.4",
     "vue-router": "^4.0.10"
