--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@webpack-cli/generators": "^2.2.0",
     "babel-loader": "^8.2.2",
@@ -17,6 +18,7 @@
     "workbox-webpack-plugin": "^6.1.5"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.6",
     "@vue/compiler-sfc": "^3.1.4",
     "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
